turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value setCouleurSol
    setCouleurSol(Color.black);
    ^LangtonsAnt:8: error: not found: value setCouleurSol
    setCouleurSol(Color.white);
    ^