turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol()==Color.white) {
    setCouleurSol(Color.black);
    baisseBrosse();
    leveBrosse()
    droite();
    avance();
  } else {
    setCouleurSol(Color.white);
    baisseBrosse();
    leveBrosse();
    gauche();
    avance();
  }
}